force-app/main/default/objects/Assignment_Request__c.object
<CustomObject>
    <fields>
        <fullName>Constituent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignment Requests</relationshipLabel>
        <relationshipName>Assignment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignment Requests</relationshipLabel>
        <relationshipName>Assignment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_to_be_assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User to be assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment Request</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Assignment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Requests</pluralLabel>
    <recordTypes>
        <fullName>Account_Assignment_Request</fullName>
        <active>true</active>
        <description>An assignment request for a household or organization.</description>
        <label>Account Assignment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Assignment_Request</fullName>
        <active>true</active>
        <description>An assignment request for a constituent.</description>
        <label>Contact Assignment Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>